<resources>
    <string name="app_name">Login</string>
    <string name="tb_title">Đăng nhập</string>
    <string name="ln_endow">Ưu đãi suốt tuần</string>
    <string name="ln_hotPlace">Điểm đến hàng đầu</string>
    <string name="hotel">Khách sạn</string>
    <string name="ticket">Vé máy bay</string>
    <string name="combo">Combo phòng vé</string>
    <string name="quick_play">Quick stay</string>
    <string name="phone">096 326 6688</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_found">Không tìm được kết quả theo chọn lọc của bạn. Xin vui lòng thay đổi hoặc xóa chọn lọc của bạn.</string>
    <string name="combo_title">Combo đồng giá</string>
    <string name="quickstay_title">Quickstay</string>
</resources>