<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:scaleType="fitXY"
                android:src="@drawable/background_banner" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_menu_header"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu" />

                <ImageView
                    android:id="@+id/im_logo_header"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/im_menu_header"
                    android:scaleType="fitStart"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/ln_group_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/contact_header"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView

                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:text="@string/phone"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <GridLayout
                android:layout_marginBottom="8dp"
                android:elevation="8dp"
                android:id="@+id/rl_menu"
                style="@style/paddingApp"
                android:layout_width="match_parent"
                android:background="@drawable/custom_menu_border"
                android:layout_height="130dp"
                android:layout_marginTop="120dp"
                android:padding="10dp"
                android:columnCount="2"
                android:rowCount="2">

                <LinearLayout
                    android:id="@+id/item_menu_hotel"
                    style="@style/menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/hotel" />

                    <TextView
                        style="@style/menu_text_view"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:text="@string/hotel" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_menu_tiket"
                    style="@style/menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/plane_ticket" />

                    <TextView
                        style="@style/menu_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:text="@string/ticket" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_menu_combo"
                    style="@style/menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/combo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/menu_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:maxWidth="60dp"
                            android:text="@string/combo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:maxWidth="100dp"
                            android:text="3N2Đ-2.299k"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_menu_quick_play"
                    style="@style/menu_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/quick_play" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/menu_text_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/quick_play" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="4dp"
                            android:maxWidth="100dp"
                            android:text="Nghỉ theo giờ"
                            android:textColor="@color/gray"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>


            </GridLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ln_endow"
            style="@style/paddingApp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ln_endow"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/item_endow"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/endow_1" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/endow_2" />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_hot_place"
            style="@style/paddingApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ln_hotPlace"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/item_hot_place"
                    android:layout_width="100dp"
                    android:layout_height="220dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/hanoi" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hà Nội" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/da_nang" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Đà Nẵng" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/hoian" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hội An" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>

    </LinearLayout>


</ScrollView>