<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HotelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="165dp"
                android:scaleType="fitXY"
                android:src="@drawable/hotel_banner" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/im_menu_header"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:paddingTop="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/im_logo_header"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/im_menu_header"
                    android:gravity="center_vertical"
                    android:text="Đặt phòng"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ln_group_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/contact_header"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone_white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="8dp"
                        android:text="@string/phone"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                style="@style/paddingApp"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_menu_border"
                android:elevation="8dp"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="8">

                <LinearLayout
                    android:id="@+id/ln_search_place"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tìm kiếm hơn 11.000 khách sạn" />

                    <TextView
                        android:id="@+id/tv_search_place"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="H. Đan Phượng, Hà Nội"
                        android:textColor="@color/black" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvText"
                    android:background="@color/gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:id="@+id/ln_check_in"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nhận phòng" />

                    <TextView
                        android:id="@+id/tv_check_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="Thứ tư - 14/02/2022"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvText"
                    android:background="@color/gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:id="@+id/ln_check_out"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trả phòng" />

                    <TextView
                        android:textColor="@color/black"
                        android:id="@+id/tv_check_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="Thứ 5 - 15/02/2022" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvText"
                    android:background="@color/gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btn_search_room"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/custom_orange"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Tìm kiếm" />

                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ln_endow"
            style="@style/paddingApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ln_endow"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/item_endow"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/endow_1" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="400dp"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/endow_1" />
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_hot_place"
            style="@style/paddingApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/ln_hotPlace"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/item_hot_place"
                    android:layout_width="100dp"
                    android:layout_height="220dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/hanoi" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hà Nội" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/da_nang" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Đà Nẵng" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="180dp"
                        android:layout_marginRight="10dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/hoian" />

                        <LinearLayout
                            style="@style/ln_group_hot"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                style="@style/hot_place_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hội An" />
                            <TextView
                                style="@style/hot_place_tv"
                                android:textStyle="normal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1000+ Khách sạn" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </HorizontalScrollView>


        </LinearLayout>

    </LinearLayout>

</ScrollView>